# checkit

./: .metadata
back/: .env  Cargo.toml  diesel.toml
back/migrations/2023-04-01-183643_create_all_tables/: down.sql  up.sql
back/src/: lib.rs  main.rs
back/src/configs/: date.rs  mod.rs
back/src/configs/enums/: EHeaderValidator.rs  mod.rs
back/src/contracts/: auth.rs  executable_task.rs  mod.rs  task.rs  template.rs  templating_task.rs  user.rs
back/src/controllers/: auth_controller.rs  executable_task_controller.rs  mod.rs  task_controller.rs  template_controller.rs  templating_task_controller.rs  userController.rs  user_controller.rs
back/src/fairings/: header_validator.rs  mod.rs
back/src/helpers/: mod.rs  multi_threading.rs  str_helper.rs
back/src/models/: auth.rs  executable_task.rs  fairings.rs  mod.rs  response.rs  schema.rs  task.rs  template.rs  templating_task.rs  user.rs
back/src/routes/: auth.rs  user.rs
back/src/schema/: schema.rs
back/src/utils/: auth.rs  header_validator.rs  mod.rs  response.rs  template.rs
front/: .gitignore  README.md  pubspec.yaml
front/android/app/: build.gradle
front/assets/images/: MAN_WITH_TASK LIST.json  REGISTER.json
front/ios/Runner/: Info.plist
front/ios/Runner.xcodeproj/: project.pbxproj
front/lib/: main.dart  router.dart
front/lib/config/: globals.dart
front/lib/controller/: auth.dart  response.dart  template.dart  user.dart
front/lib/helper/: api_requests.dart
front/lib/models/: executable_task.dart  template.dart
front/test/: widget_test.dart
front/web/: index.html  manifest.json
(+33 files in other folders)
