[package]
name = "back"
version = "0.1.0"
edition = "2021"
default-run = "back"

[[bin]]
name = "write_post"
path = "bin/write_post.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "=0.5.0-rc.3", features = ["json"] }
diesel = { version = "2.0.0", features = ["postgres", "chrono", "uuid"] }
uuid = { version = "0.8.2", features = ["serde", "v4"] }
dotenvy = "0.15"
chrono = { version = "0.4.24", features = ["serde"] }
serde = { version = "1.0.101", features = ["derive"] }
cargo-watch = "8.4.0"
bcrypt = "0.14"
jsonwebtoken = "8"
dotenv = "0.15.0"

